--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -17,4 +17,11 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   background: url('/assets/restaurant_icons.png');
+  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.navbar.navbar-inverse{
+  background:url('/assets/dark_embroidery.png');
+  border-radius: 0;
+  box-shadow: 0px 1px 3px #2a2a2a;
 }
