styled (centered) the pagination links

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,3 +6,7 @@
 	</div>
 
 	<% end %>
+
+<div class = "pagination-wrapper digg_pagination">
+  <%= will_paginate @places, :page_links => false %>
+</div>
