--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -40,11 +40,15 @@
 </div>
 
 <div class="clear"></div>
+<div class="col-xs-10 col-xs-offset-1">
+<h1 class="pull-left">Comments</h1>
 
 <!-- Button trigger modal -->
-<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
   Add a comment
 </button>
+</div>
+<div class="clear"></div>
 
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -68,10 +72,9 @@
   </div>
 </div>
 
-<h1>Comments</h1>
 
 <% @place.comments.each do |comment| %>
-  <div>
+  <div class="col-xs-12 col-sm-6">
     <blockquote>
       <% if comment.humanized_rating.present? %>
         <b><%= comment.humanized_rating %></b> -
