--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -53,6 +53,7 @@ blockquote {
   margin: 1.5em 10px;
   padding: 0.5em 10px;
   quotes: "\201C""\201D""\2018""\2019";
+  border-left: none;
 }
 blockquote:before {
   color: #ccc;
@@ -64,4 +65,10 @@ blockquote:before {
 }
 blockquote p {
   display: inline;
+}
+
+.img-responsive {
+ display: block;
+ height: auto;
+ max-width: 100%;
 }
