--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,10 +1,10 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
-<h1><%= @place.name %></h1>
-<i><%= @place.address %></i>
-<br/><br/>
-<p><%= @place.description %></p>
+  <h1><%= @place.name %></h1>
+  <i><%= @place.address %></i>
+  <br/><br/>
+  <p><%= @place.description %></p>
     
-<% if @place.latitude.present? && @place.longitude.present? %> 
+  <% if @place.latitude.present? && @place.longitude.present? %> 
     <script>
 
       function initMap() {
@@ -32,21 +32,63 @@
   <br />
 
   <div class="pull-right">
+    <!-- Button trigger modal -->
+    <button class="btn btn-primary" data-toggle="modal" data-target="#myPhotoModal">Add a Photo</button> 
     <% if current_user && current_user == @place.user %>
     <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
     <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
-      <% end %>
+      <% end %>     
+  </div>
+  <br />
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="myPhotoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Add a Photo</h4>
+      </div>
+      <div class="modal-body">
+          <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
+          <%= f.input :caption %>
+          <%= f.input :picture %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+        <%= f.submit "Upload a Photo", class: 'btn btn-primary' %>
+      </div>
+    <% end %> 
+    </div>
   </div>
 </div>
 
-<div class="clear"></div>
-<div class="col-xs-10 col-xs-offset-1">
-<h1 class="pull-left">Comments</h1>
+  <h2 class="pull-left">Photos</h2>
+  <br /><br />
+  <% @place.photos.each do |photo| %>
+    <div class="col-xs-12 col-sm-6">
+      <blockquote>
+        <b><%= photo.caption %></b>
+        <%= image_tag photo.picture, :class => 'img-responsive' %>
+      </blockquote>
+    </div>
+    <% end %>
 
-<!-- Button trigger modal -->
-<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
+    <!-- Image upload -->
+    <div class="clear"></div>
+    
+</div>
+
+<div class="clear"></div>
+
+<div class="col-xs-10 col-xs-offset-1">
+  <h2 class="pull-left">Comments</h2>
+
+  <!-- Button trigger modal -->
+  <button class="btn btn-primary btn-med pull-right" data-toggle="modal" data-target="#myModal">Add one</button>
 </div>
 <div class="clear"></div>
 
@@ -71,7 +113,6 @@
     </div>
   </div>
 </div>
-
 
 <% @place.comments.each do |comment| %>
   <div class="col-xs-12 col-sm-6">
