messing with index.html to resolve heroku error

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -70,10 +70,8 @@
   <br /><br />
   <% @place.photos.each do |photo| %>
     <div class="col-xs-12 col-sm-6">
-      <blockquote>
-        <b><%= photo.caption %></b>
+        <%= photo.caption %>
         <%= image_tag photo.picture, :class => 'img-responsive' %>
-      </blockquote>
     </div>
     <% end %>
 
