--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,30 +6,28 @@
 	
     <% if place.user.present? %>
       <small><%= place.user.email %></small>
-      <% end %>
+    <% end %>
 
-<% if place.comments.present? %>
-      <div class="col-xs-12">
-    <blockquote>
-      <% if place.comments.last.humanized_rating.present? %>
-        <b><%= place.comments.last.humanized_rating %></b> -
-      <% end %>
-        <%= place.comments.last.message %>
-        <small><%= place.comments.last.user.email %></small>
-    </blockquote>
-  </div>
-<% end %>
+    <% if place.comments.present? %>
+          <div class="col-xs-12">
+        <blockquote>
+          <% if place.comments.last.humanized_rating.present? %>
+            <b><%= place.comments.last.humanized_rating %></b>
+          <% end %>
+            <%= place.comments.last.message %>
+            <small><%= place.comments.last.user.email %></small>
+        </blockquote>
+      </div>
+    <% end %>
 
-<% if place.photos.present? %>
-<div class="col-xs-12">
-      <blockquote>
-        <b><%= place.photos.last.caption %></b>
-        <%= image_tag place.photos.last.picture, :class => 'img-responsive' %>
-      </blockquote>
-    </div>
-<% end %>
+    <% if place.photos.present? && place.photos.last.picture.present? %>
+        <div class="col-xs-12">
+            <%= place.photos.last.caption %>
+            <%= image_tag place.photos.last.picture, :class => 'img-responsive' %>
+        </div>
+    <% end %>
 
-  </div>
+</div>
 	<% end %>
 
 <div class = "pagination-wrapper digg_pagination">
