added user page

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -15,13 +15,13 @@
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider2.jpg', class: 'img-responsive'  %>
+      <%= image_tag 'slider2.jpeg', class: 'img-responsive'  %>
       <div class="carousel-caption">
         She's hungry
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider3.jpg', class: 'img-responsive'  %>
+      <%= image_tag 'slider3.jpeg', class: 'img-responsive'  %>
       <div class="carousel-caption">
         Getting impatient
       </div>
